# checkers

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  checkers.py  game.py  pyproject.toml  requirements.txt
checkers/: GUI.py  ai.py  board.py  game_logic.py  hold.py  piece.py
