[tool.poetry]
name = "checkers"
version = "0.1.0"
description = "game checkers"
authors = ["radzek15 <radzek15@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pip = "^23.1.2"
ruff = "^0.0.272"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
