[tool.poetry]
name = "checkers"
version = "0.1.0"
description = "game checkers"
authors = ["radzek15 <radzek15@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "2.4.0"
flake8 = "6.0.0"
isort = "5.12.0"
pip = "^23.1.2"
ruff = "0.0.272"
black = "23.3.0"
pre-commit = "3.3.2"
pyupgrade = "3.4.0"
attrs = "23.1.0"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2023.5.7"
cffi = "1.15.1"
cfgv = "3.3.1"
charset-normalizer = "3.1.0"
cleo = "2.0.1"
click = "8.1.3"
crashtest = "0.4.1"
cryptography = "41.0.1"
distlib = "0.3.6"
dulwich = "0.21.5"
filelock = "3.12.0"
html5lib = "1.1"
identify = "2.5.24"
idna = "3.4"
importlib-metadata = "6.6.0"
installer = "0.7.0"
jaraco-classes = "3.2.3"
jeepney = "0.8.0"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
mccabe = "0.7.0"
more-itertools = "9.1.0"
msgpack = "1.0.5"
mypy-extensions = "1.0.0"
nodeenv = "1.8.0"
packaging = "23.1"
pathspec = "0.11.1"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.5.1"
ptyprocess = "0.7.0"
pycodestyle = "2.10.0"
pycparser = "2.21"
pyflakes = "3.0.1"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
pyyaml = "6.0"
rapidfuzz = "2.15.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
secretstorage = "3.3.3"
shellingham = "1.5.0.post1"
six = "1.16.0"
tokenize-rt = "5.0.0"
tomlkit = "0.11.8"
trove-classifiers = "2023.5.24"
urllib3 = "1.26.16"
virtualenv = "20.23.0"
webencodings = "0.5.1"
zipp = "3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
